		Changed menus 14, 7.n.6, 10.1 and 8.4.
		Changed default charset for new mailgroups and message areas
		to CP437.
		Added setup for filefind keyword length in menu 13.
		Added setup items in menu 1.5 for child priority and filesystem
		sync calls.
		In several menus that can change paths, a command to mbtask is
		given to reread filesystem tables when something is changed.

	mbmon:
		Switched to use new filesystems command.
		On screen 2 added disk status.
		On screen 3, the warning colors for diskspace are now triggered
		by the global config setting, red for the upper limit, and
		yellow for the upper limit * 4.

	mbtask:
		Added communication commands for disk watch thread.
		Added disk watch thread, this will monitor filesystems usage
		for only the filesystems that are used by mbse.

	mbuseradd:
		Fixed removing of a OS created homedir. This may solve problems
		on RH and Fedora (under test).
		Added msleep delay in execute child process.

	mbpasswd:
		Added msleep delay in execute child process.

	examples:
		Updated English, German, Spanish and Dutch macro files:
		html.nodes and filemgr.status.

	lang:
		removed obsolete prompt 240.
		Updated germandu.txt (by Malte Tychsen).


v0.51.1		21-Feb-2004 - 06-Mar-2004

	upgrade:
		In all message groups set check/set default character set.
		In all message areas set the character set to use with the
		global editor (to CP437 for example). Local and netmail
		areas must be done by hand because they are most likely not
		in a group.
		The macro templates are updated, you MUST install the newfiles
		macro template at least because the format changed!
		Type "make help" in the examples subdirectory to see how.

	SETUP.sh:
		Changed to support Darwin (OS X). Note that in earlier days
		mbse did compile under OS X, but things are different since
		then. Work is underway to let it compile and run again.
	
	libmbse.a:
		Changed the execute function so it will work on 2.6.x kernels
		and fast cpu's.