@@ -110,6 +110,8 @@ v0.51.2		06-Mar-2004
 		sync calls.
 		In several menus that can change paths, a command to mbtask is
 		given to reread filesystem tables when something is changed.
+		Fixed error if a file area is deleted that has an empty files
+		database.
 
 	mbmon:
 		Switched to use new filesystems command.
